adiciono tradução aos placeholder e adiciono os atributos das respostas a perguntas

--- a/config/locales/messages.pt-BR.yml
+++ b/config/locales/messages.pt-BR.yml
@@ -1,6 +1,6 @@
-"pt-BR":
-  messages:
-    listing: Listando %{model}
-    confirm_with: Você deseja realmente excluir [%{item}?]
+'pt-BR':
+  message:
     editing: Editando %{model}
     new: Novo %{model}
+    listing: Listando %{model}
+    confirm_with: Você deseja realmente excluir [%{item}]
